--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="row1">
     <div id="about">
         <h2>ABOUT</h2>
-        <p>Hello, I am Naresh S, I am graduated in Electronics and communication Engineering.
+        <p>Hello, I am Naresh S, Graduated in Electronics and communication Engineering.
         </p>
     </div>
 
